--- a/src/_data/navigation.yaml
+++ b/src/_data/navigation.yaml
@@ -1,10 +1,9 @@
----
 items:
-  - text: Menu One
+  - text: Aides du CROUS
     url: "#"
-  - text: Menu Two
+  - text: Fonds d’aide aux jeunes (FAJ)
     url: "#"
-  - text: Menu Three
+  - text: Epicerie Etudiante La Garde
     url: "#"
   - text: Blog
-    url: "/blog"
+    url: /blog
